--- a/fortinet/acme.yml
+++ b/fortinet/acme.yml
@@ -8,7 +8,7 @@
     - fortinet.fortios
   connection: httpapi
   vars_files:
-    - vars.yml
+    - "customers/{{ customer }}/vars.yml"
   vars:
   tasks:
   - name: Generate Lets Encrypt Certificate for {{ vpn_domain }}.
