--- a/fortinet/azure_cert.yml
+++ b/fortinet/azure_cert.yml
@@ -1,10 +1,11 @@
 ---
+
 - hosts: fortigates
   collections:
     - fortinet.fortios
   connection: httpapi
   vars_files:
-    - vars.yml
+    - "customers/{{ customer }}/vars.yml"
   vars:
    ansible_httpapi_use_ssl: yes
    ansible_httpapi_validate_certs: no
