--- a/fortinet/azure_saml_configuration.yml
+++ b/fortinet/azure_saml_configuration.yml
@@ -1,10 +1,12 @@
+---
+
 - hosts: fortigates
   collections:
     - fortinet.fortios
   connection: httpapi
   gather_facts: no
   vars_files:
-    - vars.yml
+    - "customers/{{ customer }}/vars.yml"
   vars:
   tasks:
     - name: Create Single Sign-On for Azure SAML Authentication
