--- a/fortinet/gather_lldp.yml
+++ b/fortinet/gather_lldp.yml
@@ -4,7 +4,7 @@
   connection: httpapi
   gather_facts: no
   vars_files:
-    - vars.yml
+    - "customers/{{ customer }}/vars.yml"
   vars:
   tasks:
     - name: Gather LLDP Ports
