--- a/fortinet/gather_policies.yml
+++ b/fortinet/gather_policies.yml
@@ -1,9 +1,11 @@
+---
+
 - hosts: fortigates
   collections:
     - fortinet.fortios
   connection: httpapi
   vars_files:
-    - vars.yml
+    - "customers/{{ customer }}/vars.yml"
   vars:
   tasks:
     - name: Create Fortilink VLAN interfaces
