--- a/fortinet/interfaces.yml
+++ b/fortinet/interfaces.yml
@@ -4,7 +4,7 @@
   connection: httpapi
   gather_facts: no
   vars_files:
-    - vars.yml
+    - "customers/{{ customer }}/vars.yml"
     - "customers/{{ customer }}/interface_settings.yml"
   vars:
   tasks:
