--- a/fortinet/internet_outbound_policy.yml
+++ b/fortinet/internet_outbound_policy.yml
@@ -1,10 +1,12 @@
+---
+
 - hosts: fortigates
   collections:
     - fortinet.fortios
   connection: httpapi
   gather_facts: yes
   vars_files:
-    - vars.yml
+    - "customers/{{ customer }}/vars.yml"
   vars:
   tasks:
     - name: Configure the Internet Outbound policy
