--- a/fortinet/ipsec_addresses.yml
+++ b/fortinet/ipsec_addresses.yml
@@ -9,8 +9,8 @@
   connection: httpapi
   gather_facts: no
   vars_files:
-    - vars.yml
-    - ipsec_vars.yml
+    - "customers/{{ customer }}/vars.yml"
+    - "customers/{{ customer }}/ipsec_vars.yml"
   vars:
   tasks:
   - name: Register Allowed URLs from CSV file
