--- a/fortinet/ipsec_append_groups.yml
+++ b/fortinet/ipsec_append_groups.yml
@@ -1,7 +1,9 @@
+---
+
 - hosts: 
   - localhost
   vars_files:
-    - ipsec_vars.yml
+    - "customers/{{ customer }}/ipsec_vars.yml"
   vars:
   tasks:
   - name: Register addrresses to append address to group
