--- a/fortinet/ipsec_interface.yml
+++ b/fortinet/ipsec_interface.yml
@@ -1,3 +1,5 @@
+---
+
 - hosts: 
     - fortigates
   collections:
@@ -5,8 +7,8 @@
   connection: httpapi
   gather_facts: no
   vars_files:
-    - vars.yml
-    - ipsec_vars.yml
+    - "customers/{{ customer }}/vars.yml"
+    - "customers/{{ customer }}/ipsec_vars.yml"
   vars:
   tasks:
   - name: Configure IPSec Phase 1 Interface
