--- a/fortinet/nextiva_phones.yml
+++ b/fortinet/nextiva_phones.yml
@@ -1,3 +1,5 @@
+---
+
 - hosts: 
     - fortigates
   collections:
@@ -5,8 +7,8 @@
   connection: httpapi
   gather_facts: no
   vars_files:
-    - vars.yml
-    - files/nextiva_addresses.yaml
+    - "customers/{{ customer }}/vars.yml"
+    - "customers/{{ customer }}/files/nextiva_addresses.yaml"
   tasks:
     - name: Configure address type ipmasks for Nextiva
       fortios_firewall_address:
