--- a/fortinet/sslvpn_certificate.yml
+++ b/fortinet/sslvpn_certificate.yml
@@ -1,7 +1,9 @@
+---
+
 - hosts: localhost
   vars_files:
-    - vars.yml
-    - ipsec_vars.yml
+    - "customers/{{ customer }}/vars.yml"
+    - "customers/{{ customer }}/ipsec_vars.yml"
   vars:
   tasks:
   - name: Prepare shell script
