--- a/fortinet/wireless_networks.yml
+++ b/fortinet/wireless_networks.yml
@@ -1,11 +1,12 @@
 ---
+
 - hosts: ICT-PELLA-SALINA-60F
   collections:
     - fortinet.fortios
   connection: httpapi
   gather_facts: yes
   vars_files:
-    - vars.yml
+    - "customers/{{ customer }}/vars.yml"
     - "customers/{{ customer }}/wireless_settings.yml"
   vars:
   tasks:
