--- a/fortinet/wtp_profiles.yml
+++ b/fortinet/wtp_profiles.yml
@@ -8,7 +8,7 @@
   connection: httpapi
   gather_facts: no
   vars_files:
-    - vars.yml
+    - "customers/{{ customer }}/vars.yml"
     - "customers/{{ customer }}/wireless_settings.yml"
   vars:
   tasks:
