--- a/fortinet/ipsec_append_groups.yml
+++ b/fortinet/ipsec_append_groups.yml
@@ -3,6 +3,7 @@
 - hosts: 
   - localhost
   vars_files:
+    - "customers/{{ customer }}/vars.yml"
     - "customers/{{ customer }}/ipsec_vars.yml"
   vars:
   tasks:
