--- a/fortinet/customers/customer_templates/firewall_policies.yml
+++ b/fortinet/customers/customer_templates/firewall_policies.yml
@@ -7,7 +7,7 @@
   connection: httpapi
   gather_facts: yes
   vars_files:
-    - ../../vars.yml
+    - vars.yml
   vars:
   tasks:
     - name: Configure Data Inter-VLAN traffic firewall policy
