--- a/fortinet/sslvpn_certificate.yml
+++ b/fortinet/sslvpn_certificate.yml
@@ -3,12 +3,11 @@
 - hosts: localhost
   vars_files:
     - "customers/{{ customer }}/vars.yml"
-    - "customers/{{ customer }}/ipsec_vars.yml"
   vars:
   tasks:
   - name: Prepare shell script
     raw: |
-           cat > {{script_path }} << EOF_OUTER
+           cat > {{ script_path }} << EOF_OUTER
            # /bin/bash
            # Please make sure tool sshpass is installed. e.g. on Debian/Ubuntu, apt-get install sshpass.
            # Optionally you can pass some parameters.
@@ -27,6 +26,7 @@
            # ==============================================================================================
            EOF
            EOF_OUTER
+    when:  ssl_certificate == "acme"
 
 
   - name: Execute script to create {{ vpn_domain }} certificate
@@ -34,3 +34,4 @@
            chmod +x {{ script_path }} && {{ script_path }} '{{ vpn_domain }}' '{{ acme_email }}'
     args:
       executable: /bin/bash
+    when:  ssl_certificate == "acme"
