--- a/fortinet/sslvpn_settings.yml
+++ b/fortinet/sslvpn_settings.yml
@@ -29,18 +29,24 @@
            -
             name: "SSLVPN_TUNNEL_ADDR1"
           tunnel_ipv6_pools:
-           -
-            name: "SSLVPN_TUNNEL_IPv6_ADDR1"
+           - name: "SSLVPN_TUNNEL_IPv6_ADDR1"
           source_interface:
-           -
-            name: "wan1"
+           - name: "{{ wan1_interface }}"
+           - name: "{{ wan2_interface }}"
           source_address:
-           -
-            name: "all"
+           - name: "all"
           source_address6:
-           -
-            name: "all"
+           - name: "all"
           default_portal: "full-access"
           dns_server1: "{{ sslvpn_dns_server1 }}"
           dns_suffix: "{{ ad_domain }}"
 
+
+    - name: Configure SSL-VPN
+      fortios_vpn_ssl_settings:
+        vdom: "{{ vdom }}"
+        state: present
+        access_token: "{{ fortios_access_token }}" #if you prefer access token based authentication, add this line.
+        vpn_ssl_settings:
+          dns_server2: "{{ sslvpn_dns_server2 }}"
+      when: dns_server2 is defined
