--- a/fortinet/antivirus_profile.yml
+++ b/fortinet/antivirus_profile.yml
@@ -9,7 +9,7 @@
     - "customers/{{ customer }}/vars.yml"
   vars:
   tasks:
-    - name: Configure Webfilter Policy Settings
+    - name: Configure Antivirus Policy Settings
       fortios_antivirus_profile:
         vdom: "{{ vdom }}"
         state: present
@@ -22,22 +22,22 @@
           av_virus_log: "enable"
           http:
             av_scan: "block"
-            outbreak-prevention: "block"
+            outbreak_prevention: "block"
           ftp:
             av_scan: "block"
-            outbreak-prevention: "block"
+            outbreak_prevention: "block"
           imap:
             av_scan: "block"
-            outbreak-prevention: "block"
+            outbreak_prevention: "block"
           pop3:
             av_scan: "block"
-            outbreak-prevention: "block"
+            outbreak_prevention: "block"
             executables: "virus"
           smtp:
             av_scan: "block"
-            outbreak-prevention: "block"
+            outbreak_prevention: "block"
           cifs:
             av_scan: "block"
-            outbreak-prevention: "block"
-          outbreak-prevention-archive-scan: "disable"
-          external-blocklist-enable-all: "enable"
+            outbreak_prevention: "block"
+          outbreak_prevention_archive_scan: "disable"
+          external_blocklist_enable_all: "enable"
