--- a/fortinet/azure_saml_configuration.yml
+++ b/fortinet/azure_saml_configuration.yml
@@ -17,7 +17,7 @@
         user_saml:
           name: "Microsoft Azure SAML"
           cert: "{{ azure_local_certname }}"
-          entity_id: "https://{{ vpn_domain }}/remote/saml/metadata"
+          entity_id: "https://{{ vpn_domain }}/remote/saml/metadata/"
           single_sign_on_url: "https://{{ vpn_domain }}/remote/saml/login"
           single_logout_url: "https://{{ vpn_domain }}/remote/saml/logout"
           idp_entity_id: "https://sts.windows.net/{{ azure_tenant_id }}/"
@@ -25,7 +25,7 @@
           idp_single_logout_url: "https://login.microsoftonline.com/{{ azure_tenant_id }}/saml2"
           idp_cert: "{{ azure_remote_certname }}"
           user_name: "user"
-          group_name: "groups"
+          group_name: "group"
           digest_method: "sha1"
       when: sslvpn_auth_type == "saml"
 
