--- a/fortinet/azure_cert.yml
+++ b/fortinet/azure_cert.yml
@@ -12,33 +12,68 @@
    ansible_httpapi_port: 10443
    subject: "Azure"
   tasks:
-  # - name: Import Remote Certificate
-  #   fortios_monitor:
-  #     vdom:  "{{ vdom }}"
-  #     access_token: "{{ fortios_access_token }}"
-  #     enable_log: true
-  #     selector: 'import.vpn-certificate.remote'
-  #     params:
-  #       scope: "global"
-  #       file_content: "{{ azure_remote_cert }}"
-  #   register: certname
-
-  - name: Gather Certificates
-    fortios_monitor_fact:
+  - name: Import Remote Certificate
+    fortios_monitor:
       vdom:  "{{ vdom }}"
       access_token: "{{ fortios_access_token }}"
       enable_log: true
-      selector: 'system_available-certificates'
+      selector: 'import.vpn-certificate.remote'
       params:
-        with_remote: true
-        with_ca: true
-        with_crl: false
-        find_all_references: false
-    register: certificates
+        scope: "global"
+        file_content: "{{ azure_remote_cert }}"
+    register: certname
+
+  - name: Prepare shell script
+    raw: |
+           cat > {{ script_path }} << EOF_OUTER
+           # /bin/bash
+           # Please make sure tool sshpass is installed. e.g. on Debian/Ubuntu, apt-get install sshpass.
+           # Optionally you can pass some parameters.
+           # The character `a` at second line below is to avoid post-login-banner barrier.
+           sshpass -p '{{ fgt_pass }}' ssh -o StrictHostKeyChecking=no {{ fgt_user }}@{{ ansible_host }} <<EOF
+           a
+           # ====================== Edit Your Commands Below =============================================
+           config vpn certificate remote
+           rename REMOTE_Cert_1 to Azure_Remote_Certificate
+           # ==============================================================================================
+           EOF
+           EOF_OUTER
+
+  - name: Execute script to rename Azure Certificate
+    raw: |
+           chmod +x {{ script_path }} && {{ script_path }}
+    args:
+      executable: /bin/bash
+   
+
+  # - name: Gather Certificates
+  #   fortios_monitor_fact:
+  #     vdom:  "{{ vdom }}"
+  #     access_token: "{{ fortios_access_token }}"
+  #     enable_log: true
+  #     selector: 'system_available-certificates'
+  #     params:
+  #       with_remote: true
+  #       with_ca: true
+  #       with_crl: false
+  #       find_all_references: false
+  #   register: certificates
+
+  # - name: Import the remote Azure certificate for SAML authentication
+  #   fortios_vpn_certificate_remote:
+  #     vdom: "{{ vdom }}"
+  #     access_token: "{{ fortios_access_token }}"
+  #     state: present
+  #     vpn_certificate_remote:
+  #       name: "Azure_Remote_Certificate"
+  #       range: "global"
+  #       remote: "{{ azure_remote_cert }}"
+
+        
 
   - name: Filter Azure Certificate
     debug:
-      msg: "{{ certificates }}"
+      msg: "{{ azure_remote_cert }}"
     
 
   # - name: Save Output to File
