--- a/fortinet/global_system_settings.yml
+++ b/fortinet/global_system_settings.yml
@@ -14,20 +14,22 @@
         vdom: "{{ vdom }}"
         access_token: "{{ fortios_access_token }}"
         system_settings:
-          gui_multicast_policy: "enable"
-          gui_multiple_interface_policy: "enable"
-          gui_switch_controller: "enable"
-          gui_wireless_controller: "enable"
+          gui_multicast_policy: enable
+          gui_multiple_interface_policy: enable
+          gui_switch_controller: enable
+          gui_wireless_controller: enable
 
     - name: Configure Fortigate Global Settings
       fortios_system_global:
         vdom: "{{ vdom }}"
         access_token: "{{ fortios_access_token }}"
         system_global:
-          admin_console_timeout: 30
+          admin_console_timeout: 120
+          admintimeout: 30
           admin_sport: 10443
-          gui_certificates: "enable"
-          gui_theme: "mariner"
+          gui_certificates: enable
+          gui_theme: mariner
           hostname: "{{ inventory_hostname }}"
-          switch_controller: "enable"
-          timezone: "08"
+          switch_controller: enable
+          timezone: 08
+          remoteauthtimeout: 120
