--- a/fortinet/sslvpn_certificate.yml
+++ b/fortinet/sslvpn_certificate.yml
@@ -11,7 +11,7 @@
    ansible_httpapi_validate_certs: no
    ansible_httpapi_port: 10443
   tasks:
-  - name: Preparing the shell script
+  - name: Preparing script to create a Let's Encrypt certificate
     raw: |
            cat > {{ script_path }} << EOF_OUTER
            # /bin/bash
@@ -37,7 +37,7 @@
       - ssl_certificate_type == "acme"
 
 
-  - name: Executing the script to create sslvpn certificate.
+  - name: Executing the script and creating the Let's encrypt certificate.
     raw: |
            chmod +x {{ script_path }} && {{ script_path }} '{{ vpn_domain }}' '{{ acme_email }}'
     args:
@@ -46,7 +46,7 @@
       - ssl_certificate_type is defined  
       - ssl_certificate_type == "acme"
 
-  - name: Importing the sslvpn certificate.
+  - name: Importing Base64 encoded PEM certificate and private key.
     fortios_monitor:
       vdom:  "{{ vdom }}"
       access_token: "{{ fortios_access_token }}"
@@ -60,9 +60,14 @@
         password: "{{ private_key_pass }}"
         scope: "global"
     when: 
-    #   - ssl_certificate_types is defined
+       - ssl_certificate_type is defined
        - ssl_certificate_type == "pem"
 
+    #####################################################
+    ## This method does not appear to be working so I  ##
+    ## had to use the fortios_monitor module.          ##
+    #####################################################
+    
     # fortios_vpn_certificate_local:
     #   vdom: "{{ vdom }}"
     #   state: present
@@ -75,3 +80,6 @@
     # when: 
     #   - ssl_certificate_types is defined
     #   - ssl_certificate_type == "pem"
+
+    #####################################################
+    #####################################################
