--- a/fortinet/sslvpn_configuration.yml
+++ b/fortinet/sslvpn_configuration.yml
@@ -9,7 +9,7 @@
     - "customers/{{ customer }}/vars.yml"
   vars:
   tasks:
-    - name: Update SSLVPN_TUNNEL_ADDR1 with SSLVPN Client IP Range
+    - name: Updating the SSLVPN_TUNNEL_ADDR1 address object with the specified IP address range.
       fortios_firewall_address:
         vdom: "{{ vdom }}"
         state: present
@@ -20,7 +20,7 @@
           start_ip: "{{ sslvpn_client_start_ip }}"
           end_ip: "{{ sslvpn_client_end_ip }}"
 
-    - name: Create the no-access SSLVPN Web Portal
+    - name: Creating the no-access SSLVPN profile to use as default.
       fortios_vpn_ssl_web_portal:
         vdom: "{{ vdom }}"
         state: present
