Improved SSLVP Configuration

--- a/fortinet/sslvpn_firewall_policy.yml
+++ b/fortinet/sslvpn_firewall_policy.yml
@@ -29,7 +29,7 @@
             name: "SSLVPN_TUNNEL_ADDR1"
           dstaddr:
            -
-            name: "port4 address"
+            name: "internal"
           schedule: "always"
           service:
            -
