--- a/fortinet/sslvpn_playbook.yml
+++ b/fortinet/sslvpn_playbook.yml
@@ -1,8 +1,7 @@
 ---
-- import_playbook: azure_cert.yml
-- import_playbook: sslvpn_certificate.yml
-- import_playbook: ldap_configuration.yml
-- import_playbook: sslvpn_certificate.yml
+# - import_playbook: azure_cert.yml
+# - import_playbook: sslvpn_certificate.yml
+# - import_playbook: ldap_configuration.yml
 - import_playbook: azure_saml_configuration.yml
 - import_playbook: sslvpn_configuration.yml
 - import_playbook: sslvpn_settings.yml
