--- a/fortinet/sip_alg.yml
+++ b/fortinet/sip_alg.yml
@@ -1,12 +1,10 @@
----
-
 - hosts: fortigates
   collections:
     - fortinet.fortios
   connection: httpapi
   gather_facts: no
   vars_files:
-    - "customers/{{ customer }}/vars.yml"
+    - vars.yml
   vars:
   tasks:
     - name: Remove SIP ALG Session-Helper
