--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@ fortinet/certificates/*
 fortinet/customers/*
 fortinet/system_admin.yml
 fortinet/fortimanager.yml
-arubaoscx/group_vars
+arubaoscx/group_vars/*
 .vscode
 
 #Exceptions
