--- a/fortinet_with_roles/playbook.yml
+++ b/fortinet_with_roles/playbook.yml
@@ -2,8 +2,8 @@
 - name: Fortigate Configuration
   hosts: fortigates
   collections:
-    - fortinet.fortios
+    - fortinet.fortios  
   connection: httpapi
-  gather_facts: no
+  gather_facts: True
   roles:
     - common
